--- a/views/common_headers.ejs
+++ b/views/common_headers.ejs
@@ -78,3 +78,6 @@
 
 <script defer type="text/javascript" src="http://code.jquery.com/jquery-3.1.1.js"></script>
 <script defer src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
+
