--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -45,6 +45,7 @@
 			<% } %>
 			<li id="getting_started"><a href="getting_started.html" target="_top"><%=l('Getting started')%></a></li>
 			<li id="about"><a href="about.html" target="_top"><%=l('About')%></a></li>
+			<li id="forum"><a href="href="http://forum.<%=url%>/forums"><%=l('Forum')%></a></li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right">
