Updated aw maps

--- a/views/about_en.ejs
+++ b/views/about_en.ejs
@@ -87,6 +87,7 @@
 			<h3>Special thanks to:</h3>
 			<p>
 			<ul>
+			<li>plissken for some good suggestions. 
 			<li>juho-p for: <a href="https://github.com/juho-p/wot-debugserver">wot-debugserver</a>. Not only is is a great way to poke around in the wot client as it is running. The wottactic mod is pretty much built on it. If you want to get into modding, this is where you start.
 			<li>TomNedry for the squad maps.
 			<li><a href="http://www.simpleradar.com/">http://www.simpleradar.com/</a> for the high contrast cs:go maps.
