--- a/views/aw_maps.ejs
+++ b/views/aw_maps.ejs
@@ -1,33 +1,39 @@
 <option value=""> </option>
-<option data-size="1400x1400" value="<%=static_host%>/maps/aw/mini_coldstrike.jpg"><%=l('Coldstrike')%></option>
+<option data-size="1000x1000" value="<%=static_host%>/maps/aw/albino_polygon.jpg"><%=l('Albino polygon')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/coastal_threat.jpg"><%=l('Coastal threat')%></option>
-<option data-size="1400x1400" value="<%=static_host%>/maps/aw/reactor.jpg"><%=l('Reactor')%></option>
+<option data-size="1600x1600" value="<%=static_host%>/maps/aw/desert_crossing.jpg"><%=l('Desert crossing')%></option>
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/frontline.jpg"><%=l('Frontline')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/mini_ghostfield.jpg"><%=l('Ghostfield')%></option>
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/mini_coldstrike.jpg"><%=l('Coldstrike')%></option>
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/reactor.jpg"><%=l('Reactor')%></option>
 <option data-size="1400x1400" value="<%=static_host%>/maps/aw/lost_island.jpg"><%=l('Lost Island')%></option>
 <option data-size="1240x1240" value="<%=static_host%>/maps/aw/mini_portstorm.jpg"><%=l('Portstorm')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/mini_riverpoint.jpg"><%=l('Riverpoint')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/mini_roughneck.jpg"><%=l('Roughneck')%></option>
 <option data-size="1160x1160" value="<%=static_host%>/maps/aw/minimap_narrows.jpg"><%=l('Narrows')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/minimap_pipelines.jpg"><%=l('Pipelines')%></option>
-<option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_albatros.jpg"><%=l('Operation Albatros')%></option>
-<option value="<%=static_host%>/maps/aw/anvil_minimap.jpg"><%=l('Operation Anvil')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/highwall.jpg"><%=l('Highwall')%></option>
-<option data-size="1200x1200" value="<%=static_host%>/maps/aw/highwall_confrontation.jpg"><%=l('Highwall confrontation')%></option>	
 <option data-size="1000x1000" value="<%=static_host%>/maps/aw/banshee_minimap.jpg"><%=l('Operation Banshee')%></option>	
+<option data-size="1200x1200" value="<%=static_host%>/maps/aw/operation_albatros.jpg"><%=l('Operation Albatros')%></option>
+<option value="<%=static_host%>/maps/aw/anvil_minimap.jpg"><%=l('Operation Anvil')%></option>
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_basilisk.jpg"><%=l('Operation Basilisk')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/operation_cavalry.jpg"><%=l('Operation Cavalry')%></option>
 <option data-size="1220x1220" value="<%=static_host%>/maps/aw/operation_cerberus.jpg"><%=l('Operation Cerberus')%></option>
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/operation_coastal_threath.jpg"><%=l('Operation Coastal Threath')%></option>
 <option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_direwolf.jpg"><%=l('Operation Direwolf')%></option>
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_erebos.jpg"><%=l('Operation Erebos')%></option>
+<option data-size="1200x1200" value="<%=static_host%>/maps/aw/operation_frostbite.jpg"><%=l('Operation Frostbite')%></option>
 <option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_ghotshunt.jpg"><%=l('Operation Ghosthunt')%></option>
 <option data-size="800x800" value="<%=static_host%>/maps/aw/harbinger_minimap.jpg"><%=l('Operation Harbringer')%></option>
-<option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_prometeus.jpg"><%=l('Operation Prometeus')%></option>
-<option data-size="1600x1600" value="<%=static_host%>/maps/aw/operation_meltdown.jpg"><%=l('Operation Meltdown')%></option>
 <option data-size="900x900" value="<%=static_host%>/maps/aw/hydra_minimap.jpg"><%=l('Operation Hydra')%></option>	
 <option data-size="1000x1000" value="<%=static_host%>/maps/aw/kodiak_minimap.jpg"><%=l('Operation Kodiak')%></option>
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_leviathan.jpg"><%=l('Operation Leviathan')%></option>
 <option data-size="1024x1024" value="<%=static_host%>/maps/aw/lifejacket_minimap.jpg"><%=l('Operation Lifejacket')%></option>
+<option data-size="1600x1600" value="<%=static_host%>/maps/aw/operation_meltdown.jpg"><%=l('Operation Meltdown')%></option>
 <option data-size="1240x1240" value="<%=static_host%>/maps/aw/onyx_minimap.jpg"><%=l('Operation Onyx')%></option>
 <option data-size="832x832" value="<%=static_host%>/maps/aw/persus_minimap.jpg"><%=l('Operation Persus')%></option>				
 <option data-size="1200x1200" value="<%=static_host%>/maps/aw/operation_phalanx.jpg"><%=l('Operation Phalanx')%></option>
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_prometeus.jpg"><%=l('Operation Prometeus')%></option>
 <option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_quarterback.jpg"><%=l('Operation Quarterback')%></option>
 <option data-size="810x810" value="<%=static_host%>/maps/aw/redopossum_minimap.jpg"><%=l('Operation Redopossum')%></option>	
 <option data-size="1240x1240" value="<%=static_host%>/maps/aw/operation_ricochet.jpg"><%=l('Operation Ricochet')%></option>
@@ -42,4 +48,5 @@
 <option data-size="1240x1240" value="<%=static_host%>/maps/aw/operation_tsunami.jpg"><%=l('Operation Tsunami')%></option>
 <option data-size="1210x1210" value="<%=static_host%>/maps/aw/operation_umbrella.jpg"><%=l('Operation Umbrella')%></option>
 <option data-size="900x900" value="<%=static_host%>/maps/aw/operation_wildfire.jpg"><%=l('Operation Wildfire')%></option>	
+<option data-size="1400x1400" value="<%=static_host%>/maps/aw/operation_zerohour.jpg"><%=l('Operation Zero hour')%></option>	
 				
