--- a/views/common_headers.ejs
+++ b/views/common_headers.ejs
@@ -32,7 +32,7 @@
 <link rel="stylesheet" href="<%=static_host%>/stylesheets/style.css">
 <link rel="icon" type="image/png" href="<%=static_host%>/icons/favicon.ico">
 <meta name="game" content="<%=game%>">
-<meta name="keywords" content="planner,tactic,map,strategy,tool,esport,maptactic,twiddla,strategy,stratsketch,scrum,whiteboard,colaborate">
+<meta name="keywords" content="planner,tactic,map,maps,strategy,tool,esport,maptactic,twiddla,strategy,stratsketch,scrum,whiteboard,colaborate">
 <%if (game == 'wot') {%>
 	<meta name="keywords" content="wot,world,tanks,world of tanks,cw,clanwar,clan war,clan wars,team battles,skirmish,skirmishes,wargaming,armored,stronghold,campaign,tier,tank,stronghold">
 <%} else if (game == 'wows') {%>
@@ -80,4 +80,5 @@
 <script defer src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400" rel="stylesheet">
 
