--- a/views/older_news.ejs
+++ b/views/older_news.ejs
@@ -115,5 +115,9 @@
 			
 			<p>Good luck out there.
 		</div>
+		<div class="col-md-4">
+			<h2>Network issues</h2>
+			<p>Dns issues on the US east coast made the CDN I'm using unavailable. So the main server needs to now handle all the static contents (images/maps/js). If things are a little slower than usual bear with it for now. 				
+		</div>
 	</div>
 </body>
