--- a/views/about_en.ejs
+++ b/views/about_en.ejs
@@ -115,6 +115,7 @@
 			<h3>Donators, in no particular order</h3>
 			<p>
 			<ul>
+			<li>3meyc
 			<li>Zombie_Farmer
 			<li>H311fi5h
 			<li>Boris Fekar (FPC clan)
