--- a/views/common_headers.ejs
+++ b/views/common_headers.ejs
@@ -50,13 +50,13 @@
 <%} else if (game == 'warface') {%>
 	<meta name="keywords" content="warface,crytek">
 <%} else if (game == 'blitz') {%>
-	<meta name="keywords" content="wot,world,tanks,world of tanks,blitz,world of tanks blitz,cw,clanwar,wargaming,armored,stronghold,campaign,tier,tank">
+	<meta name="keywords" content="wot,world,tanks,world of tanks,blitz,world of tanks blitz,cw,clanwar,wargaming,armored,stronghold,campaign,tier,tank,strategy">
 <%}%>
 
 <meta property="og:title" content="<%=game.toUpperCase()%> Tactics">
 <meta property="og:site_name" content="<%=game.toUpperCase()%> Tactic">
 <meta property="og:url" content="http://<%=url.split('/')[0]%>/<%=game%>">
-<meta property="og:description" content="A tool for <%=game.toUpperCase()%> to plan battles, explore maps or share and discuss map tactics with your friends, team, platoon or clan.">
+<meta property="og:description" content="A tool for <%=game.toUpperCase()%> to plan battles, explore maps or share and discuss map strategies or tactics with your friends, team, platoon or clan.">
 <meta property="fb:app_id" content="580177672120479">
 <meta property="og:type" content="website">
 
