--- a/views/older_news.ejs
+++ b/views/older_news.ejs
@@ -119,5 +119,24 @@
 			<h2>Network issues</h2>
 			<p>Dns issues on the US east coast made the CDN I'm using unavailable. So the main server needs to now handle all the static contents (images/maps/js). If things are a little slower than usual bear with it for now. 				
 		</div>
+		<div class="col-md-4">
+			<h2>Future plans</h2>
+			<p>
+			<ul>
+				<li>Support for drawing while panning
+				<li style="text-decoration: line-through;">Better support for touch devices (pinch zoom, pan support)
+				<li>Write text directly on the map
+				<li>Share folders in addition to just tactics
+			</ul>
+			<p>If you have any suggestions, you can put them on the forums, contact me by e-mail or put them in the survey.			
+		</div>
+		<div class="col-md-4">
+			<h2>2,000,000 visits</h2>
+			<p>Since the beginning of March, when i started monitoring traffic, 314,809 users have visitited this website a total of 2,031,807 times, visiting 3,822,789 pages. At least 335,645 rooms have been created and 38,127 tactics have been stored.
+
+			<p>Thank you for your support. I think that's pretty amazing.
+
+			<p>For more details here's a google analytics <a href="http://karellodewijk.github.io/total_visitors.pdf">report</a>.
+		</div>
 	</div>
 </body>
