--- a/views/sc2_maps.ejs
+++ b/views/sc2_maps.ejs
@@ -4,10 +4,13 @@
 <option data-size="172x161" value="<%=static_host%>/maps/sc2/Avalon_Labs.jpg"><%=l("Avalon Labs")%></option>
 <option data-size="148x145" value="<%=static_host%>/maps/sc2/Backcountry.jpg"><%=l("Backcountry")%></option>
 <option data-size="168x168" value="<%=static_host%>/maps/sc2/Distant_Plane.jpg"><%=l("Distant Plane")%></option>
+<option value="<%=static_host%>/maps/sc2/daybreak.jpg"><%=l("Daybreak LE")%></option>
 <option data-size="196x124" value="<%=static_host%>/maps/sc2/Doraelus_Hills.jpg"><%=l("Doraelus Hills")%></option>
 <option data-size="156x153" value="<%=static_host%>/maps/sc2/Dusk_Towers.jpg"><%=l("Dusk Towers")%></option>
+<option value="<%=static_host%>/maps/sc2/echo.jpg"><%=l("Echo LE")%></option>
 <option data-size="164x170" value="<%=static_host%>/maps/sc2/Fields_of_Death.jpg"><%=l("Fields of Death")%></option>
 <option data-size="136x136" value="<%=static_host%>/maps/sc2/Frozen_Temple.jpg"><%=l("Frozen Temple")%></option>
+<option value="<%=static_host%>/maps/sc2/habitation_station.jpg"><%=l("Habitation Station LE")%></option>
 <option data-size="156x160" value="<%=static_host%>/maps/sc2/Hidden_Caves.jpg"><%=l("Hidden Caves")%></option>
 <option data-size="192x168" value="<%=static_host%>/maps/sc2/Ice_Cliffs.jpg"><%=l("Ice Cliffs")%></option>
 <option data-size="140x140" value="<%=static_host%>/maps/sc2/Infestation.jpg"><%=l("Infestation")%></option>
@@ -18,11 +21,15 @@
 <option data-size="184x192" value="<%=static_host%>/maps/sc2/Moebius_Facility_XX-1.jpg"><%=l("Moebius Facility XX-1")%></option>
 <option data-size="176x176" value="<%=static_host%>/maps/sc2/New_Richmond.jpg"><%=l("New Richmond")%></option>
 <option data-size="165x176" value="<%=static_host%>/maps/sc2/New_Williamsberg.jpeg"><%=l("New Williamsberg")%></option>
+<option value="<%=static_host%>/maps/sc2/newkirk.jpg"><%=l("Newkirk Precinct TE")%></option>
 <option data-size="168x168" value="<%=static_host%>/maps/sc2/Omicron.jpg"><%=l("Omicron")%></option>
+<option value="<%=static_host%>/maps/sc2/overgrowth.jpg"><%=l("Overgrowth")%></option>
 <option data-size="140x152" value="<%=static_host%>/maps/sc2/Prion_Terraces.jpg"><%=l("Prion Terraces")%></option>
 <option data-size="152x192" value="<%=static_host%>/maps/sc2/Research_Site_JD-2.jpg"><%=l("Research Site JD-2")%></option>
 <option data-size="132x148" value="<%=static_host%>/maps/sc2/Ruins_of_Endion.jpg"><%=l("Ruins of Endion")%></option>
 <option data-size="176x184" value="<%=static_host%>/maps/sc2/Slaying_Field.jpg"><%=l("Slaying Field")%></option>
 <option data-size="164x166" value="<%=static_host%>/maps/sc2/Sludge_City.jpg"><%=l("Sludge City")%></option>
 <option data-size="164x120" value="<%=static_host%>/maps/sc2/Ulrena.jpg"><%=l("Ulrena")%></option>
+<option value="<%=static_host%>/maps/sc2/vaani.jpg"><%=l("Vaani research station")%></option>
 <option data-size="200x168" value="<%=static_host%>/maps/sc2/Void_Zone.jpg"><%=l("Void Zone")%></option>
+<option value="<%=static_host%>/maps/sc2/whirlwind.jpg"><%=l("Whirlwind LE")%></option>
