--- a/views/squad_maps.ejs
+++ b/views/squad_maps.ejs
@@ -4,7 +4,8 @@
 <option data-size="1430x1430" value="<%=static_host%>/maps/squad/forest_minimap.jpg"><%=l('OP First Light')%></option>
 <option data-size="2420x2420" value="<%=static_host%>/maps/squad/gorodok_minimap.jpg"><%=l('Gorodok')%></option>
 <option data-size="1485x1485" value="<%=static_host%>/maps/squad/Jensens_Range_Minimap.jpg"><%=l('Lost Island')%></option>
-<option data-size="3960x3960" value="<%=static_host%>/maps/squad/kohat_minimap.jpg"><%=l('Kohat Toi River Valley 	View')%></option>
+<option data-size="3960x3960" value="<%=static_host%>/maps/squad/kohat_minimap.jpg"><%=l('Kohat Toi River Valley View')%></option>
+<option data-size="2530x2530" value="<%=static_host%>/maps/squad/kokan_minimap.jpg"><%=l('Kokan')%></option>
 <option data-size="1760x1760" value="<%=static_host%>/maps/squad/logarvalley_minimap.jpg"><%=l('Logar Valley')%></option>
 <option data-size="1320x1320" value="<%=static_host%>/maps/squad/sumari_overlay.jpg"><%=l('Sumari Bala')%></option>
 <option data-size="4180x4180" value="<%=static_host%>/maps/squad/yehorivka_minimap.jpg"><%=l('Yehorivka')%></option>
