Put the identity in the logged_in cookie, so the forum cam make out when a user changed account

--- a/views/blitz_maps.ejs
+++ b/views/blitz_maps.ejs
@@ -1,6 +1,7 @@
 <option value=""> </option>
 <option data-size="600x600" value="<%=static_host%>/maps/blitz/01 - Black Goldville.jpg"><%=l('Black Goldville')%></option>
 <option data-size="600x600" value="<%=static_host%>/maps/blitz/02 - Castilla.jpg"><%=l('Castilla')%></option>
+<option data-size="600x600" value="<%=static_host%>/maps/blitz/canyon.jpg"><%=l('Canyon')%></option>
 <option data-size="600x600" value="<%=static_host%>/maps/blitz/03 - Copperfield.jpg"><%=l('Copperfield')%></option>
 <option data-size="600x600" value="<%=static_host%>/maps/blitz/04 - Dead Rail.jpg"><%=l('Dead Rail')%></option>
 <option data-size="600x600" value="<%=static_host%>/maps/blitz/05 - Desert Sands.jpg"><%=l('Desert sands')%></option>
